# rutrcinemabot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT.md  README.md  SETUP_GUIDE.md  koyeb.yaml  prd.json  progress.txt  pyproject.toml  ralph.sh
.claude/: settings.local.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURES.md  FREEBOX_VM_SETUP.md  SEEDBOX_SETUP.md
scripts/: config.env.template  library_indexer.py  sync_daemon.service  sync_daemon.sh  sync_seedbox.sh
src/: config.py  logger.py
src/ai/: __init__.py  claude_client.py  prompts.py  tools.py
src/bot/: __init__.py  conversation.py  entity_cards.py  handlers.py  library.py  main.py  model_settings.py  onboarding.py  rutracker_auth.py  seedbox_auth.py  streaming.py  sync_api.py
src/media/: __init__.py  kinopoisk.py  omdb.py  tmdb.py
src/monitoring/: __init__.py  checker.py  news_digest.py  scheduler.py  torrent_monitor.py
src/search/: __init__.py  piratebay.py  rutracker.py  torapi.py
src/seedbox/: __init__.py  client.py
src/services/: __init__.py  letterboxd.py  letterboxd_export.py  letterboxd_rss.py  news.py
src/user/: __init__.py  memory.py  profile.py  storage.py
tests/: test_claude_client.py  test_conversation.py  test_kinopoisk.py  test_onboarding.py  test_piratebay.py  test_rutracker.py  test_seedbox.py  test_streaming.py  test_tmdb.py  test_tools.py  test_user_storage.py
